<resources>
    <string name="app_name">FournitureKing</string>
    <string name="titleHome">Accueil</string>
    <string name="titleHistory">Historique</string>
    <string name="titleBasket">Panier</string>
    <string name="titleSettings">Paramètres</string>
    <string name="email">Email</string>
    <string name="signIn">Connexion</string>
    <string name="connect">Connecte toi !</string>
    <string name="rememberMe">Se souvenir de moi</string>
    <string name="inscription">Inscription</string>
    <string name="validate">valider</string>
    <string name="forgottenPassword">Mot de passe oublié ?</string>
    <string name="confirmPassword">Confirmer le mot de passe</string>
    <string name="password">Mot de passe</string>
    <string name="signUpNow">Inscrit toi !</string>
    <string name="searchBarHome">Table basse</string>
    <string name="searchResultTitle">Résultat(s) de recherche</string>
    <string name="searchResultCategory">Chaise</string>
    <string name="titleSearch">Recherche</string>

    <string name="cover">Cover</string>
    <string name="titlePlaceHolder">Title Place Holder</string>
    <string name="authorPlaceHolder">Description de L\'article</string>
    <string name="popularArticle">Populaire en ce moment...</string>
    <string name="whatIsUp">Quoi de neuf ?</string>
    <string name="price">59€</string>
    <string name="tvRatingBar">4.9/5</string>
    <string name="tvOpinion">(avis)</string>
    <string name="firstName">Prénom</string>
    <string name="phone">Mobile</string>
    <string name="lastName">Nom</string>
    <string name="address">Adresse</string>
    <string name="expiryDate">MM/AA</string>
    <string name="cardNumber">0123 4657 8901 2345</string>
    <string name="securityCode">123</string>
    <string name="littleLorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="normalLorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="BigLorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="colors">COULEURS</string>
    <string name="bleu">Bleu</string>
    <string name="red">Rouge</string>
    <string name="black">Noir</string>
    <string name="white">Blanc</string>
    <string name="orange">Orange</string>
    <string name="purpul">Violet</string>
    <string name="brown">Marron</string>
    <string name="green">Vert</string>
    <string name="grey">Gris</string>
    <string name="yellow">Jaune</string>

    <string-array name="colorsList">
        <item>Bleu</item>
        <item>Rouge</item>
        <item>Noir</item>
        <item>Blanc</item>
        <item>Orange</item>
        <item>Violet</item>
        <item>Marron</item>
        <item>Vert</item>
        <item>Gris</item>
        <item>Jaune</item>
    </string-array>

    <string name="sortBy">TRIER PAR</string>
    <string name="increasingPrice">Prix croissant</string>
    <string name="decreasingPrice">Prix décroissant</string>
    <string name="popular">Populaire</string>
    <string name="alphabetic">Alphabétique</string>

    <string-array name="typeSortList">
        <item>Prix croissant</item>
        <item>Prix décroissant</item>
        <item>Note client</item>
        <item>Alphabétique</item>
    </string-array>

    <string name="deliveryTimes">DÉLAIS DE LIVRAISON</string>
    <string name="quickSupply">Livraison rapide</string>
    <string name="fourWeeks">(4 semaines)</string>
    <string name="standardSupply">Livraison standart</string>
    <string name="eightWeeks">(8 semaines)</string>
    <string name="titleBookmark">Favoris</string>

    <string-array name="deliveryList">
        <item>Livraison rapide</item>
        <item>Livraison standart</item>
    </string-array>

    <string name="aboutUs">About us</string>
    <string name="holder">John Lenon</string>
    <string name="expiryTitle">Expiry</string>
    <string name="holderTitle">Holder</string>
    <string name="buy">ACHETER</string>
    <string name="recap">Récapitulatif</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>