<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home"
            android:title="@string/titleHome" />

    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_category"
            android:title="@string/titleSearch" />

    <item
            android:id="@+id/navigation_history"
            android:icon="@drawable/ic_history"
            android:title="@string/titleHistory" />
    <item
            android:id="@+id/navigation_basket"
            android:icon="@drawable/ic_basket"
            android:title="@string/titleBasket" />

    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/titleSettings"/>

</menu>