<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <TextView
            android:text="Profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/lastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" />

    <EditText
            android:id="@+id/firstName"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:hint="@string/firstName"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/lastName"
            app:layout_constraintBottom_toTopOf="@+id/emailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" />

    <EditText
            android:id="@+id/lastName"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:hint="@string/lastName"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/firstName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" />

    <EditText
            android:id="@+id/emailAddress"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/firstName"
            app:layout_constraintBottom_toTopOf="@+id/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" />

    <EditText
            android:id="@+id/phone"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/emailAddress"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" />

    <EditText
            android:id="@+id/password"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="123456789"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" />

    <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirmPassword"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintBottom_toTopOf="@+id/physicalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" />

    <EditText
            android:id="@+id/physicalAddress"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:hint="@string/physicalAddress"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
            app:layout_constraintBottom_toTopOf="@+id/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:text="SAVE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/physicalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" />

    <fragment
            android:name="com.example.app.ui.OtherFragment.ButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_back"
            android:id="@+id/imgBack"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
