<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.app.ui.pages.home.HomeFragment">

    <TextView
            android:id="@+id/tvConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" />

    <TextView
            android:id="@+id/popularArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularArticle"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tvConnection"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp" />


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPopularArticle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/popularArticle"
            android:layout_marginTop="16dp" />

    <TextView
            android:id="@+id/whatIsUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/whatIsUp"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewPopularArticle"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewWhatIsUp"
            android:layout_width="match_parent"
            android:scrollbars="none"
            app:flow_maxElementsWrap="4"
            android:fillViewport="true"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/whatIsUp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
