<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp">

    <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_beige_chair"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cover"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:text="@string/titlePlaceHolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="@+id/imgProduct"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/imgProduct"
            app:layout_constraintEnd_toStartOf="@+id/fragmentContainerView"
            android:layout_marginEnd="16dp" />

    <TextView
            android:text="@string/littleLorem"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/tvDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/imgProduct"
            app:layout_constraintEnd_toStartOf="@+id/tvPrice"
            android:layout_marginEnd="16dp"
            android:ellipsize="end" />

    <TextView
            android:text="@string/price"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvPrice"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/tvDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:name="com.example.app.ui.OtherFragment.ButtonQteFragment"
            android:id="@+id/fragmentContainerView"
            android:layout_width="100dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/imgProduct"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/tvPrice">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="+"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/btnPlus"
                app:layout_constraintStart_toEndOf="@+id/tvQte"
                android:textAlignment="center"
                android:background="@drawable/styles_articles_home"
                />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="1"
                android:id="@+id/tvQte"
                app:layout_constraintEnd_toStartOf="@+id/btnPlus"
                app:layout_constraintStart_toEndOf="@+id/btnMinus"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAlignment="center" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/btnMinus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/tvQte"
                android:background="@drawable/styles_articles_home"
                />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>