<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/styles_articles_home">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp">

            <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_beige_chair"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/cover"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.502" />

            <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/ic_black_border_heart"
                    android:id="@+id/imgBlackBorderHeart"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:clickable="true"
                    android:visibility="visible" />

            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_red_heart"
                    android:id="@+id/imgRedHeart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:ellipsize="end"
                android:text="@string/titlePlaceHolder"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:lines="2"
                android:textStyle="bold"
                android:fontFamily="@font/poiret_one" />

        <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/authorPlaceHolder"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:lines="1"
                android:padding="5dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

            <TextView
                    android:id="@+id/tvRatingbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tvRatingBar"
                    android:textColor="@color/darkGray"
                    android:lines="1"
                    android:fontFamily="@font/poiret_one"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toEndOf="@+id/ratingBar"
                    app:layout_constraintTop_toTopOf="@+id/ratingBar"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/ratingBar" />

            <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="0dp"
                    android:layout_height="17dp"
                    style="?android:attr/ratingBarStyleSmall"
                    android:stepSize="0.5"
                    android:numStars="5"
                    android:rating="2.5"
                    android:isIndicator="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
                android:id="@+id/tvPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="right"
                android:text="@string/price"
                android:textColor="@color/darkGray"
                android:lines="1"
                android:fontFamily="@font/poiret_one" />

    </LinearLayout>

</androidx.cardview.widget.CardView>











