<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.app.ui.pages.settings.AddCreditCardActivity">

  <EditText
          android:id="@+id/edtCardNumber"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:background="@drawable/styles_input_connexion_page"
          android:ems="16"
          android:hint="@string/cardNumber"
          android:minHeight="48dp"
          app:circularflow_defaultRadius="100dp"
          app:circularflow_radiusInDP="102dp"
          app:layout_constraintCircleRadius="100dp"
          android:autofillHints=""
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:layout_marginTop="16dp"
          app:layout_constraintTop_toBottomOf="@+id/textView6"
          android:inputType="number"
          android:maxLines="1"
          android:maxLength="16" />

  <EditText
          android:id="@+id/edtSecurityCode"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:background="@drawable/styles_input_connexion_page"
          android:ems="16"
          android:hint="@string/securityCode"
          android:minHeight="48dp"
          app:circularflow_defaultRadius="100dp"
          app:circularflow_radiusInDP="102dp"
          app:layout_constraintCircleRadius="100dp"
          android:autofillHints=""
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/edtExpiryDate"
          app:layout_constraintHorizontal_bias="0.5"
          android:layout_marginStart="16dp"
          app:layout_constraintTop_toTopOf="@+id/edtExpiryDate"
          app:layout_constraintBottom_toBottomOf="@+id/edtExpiryDate"
          android:layout_marginEnd="16dp"
          android:inputType="number"
          android:maxLines="1"
          android:maxLength="3" />

  <EditText
          android:id="@+id/edtExpiryDate"
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:background="@drawable/styles_input_connexion_page"
          android:ems="16"
          android:hint="@string/expiryDate"
          android:minHeight="48dp"
          app:circularflow_defaultRadius="100dp"
          app:circularflow_radiusInDP="102dp"
          app:layout_constraintCircleRadius="100dp"
          android:autofillHints=""
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="16dp"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintEnd_toStartOf="@+id/edtSecurityCode"
          android:layout_marginTop="16dp"
          app:layout_constraintTop_toBottomOf="@+id/textView7"
          android:maxLength="5"
          android:maxLines="1" />

  <TextView
          android:text="Code de sécurité"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/textView8"
          app:layout_constraintBottom_toBottomOf="@+id/textView7"
          app:layout_constraintTop_toTopOf="@+id/textView7"
          app:layout_constraintStart_toStartOf="@+id/edtSecurityCode" />

  <TextView
          android:text="Date d'exp."
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/textView7"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="16dp"
          android:layout_marginTop="16dp"
          app:layout_constraintTop_toBottomOf="@+id/edtCardNumber" />

  <TextView
          android:text="Numéro de carte"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/textView6"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="16dp"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_marginTop="16dp" />

  <TextView
          android:text="Pays"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/textView9"
          android:layout_marginTop="16dp"
          app:layout_constraintTop_toBottomOf="@+id/edtExpiryDate"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="16dp" />

  <TextView
          android:text="Pays"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:id="@+id/textView10"
          android:layout_marginTop="16dp"
          app:layout_constraintTop_toBottomOf="@+id/textView9"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:padding="20dp" />

  <Button
          android:text="Suivant"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:id="@+id/btnNext"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginBottom="16dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>